--- a/src/scss/main-ar/main-ar.scss
+++ b/src/scss/main-ar/main-ar.scss
@@ -38,8 +38,8 @@ $dir: rtl;
 @import "bootstrap-rtl/list-group";
 @import "bootstrap-rtl/close";
 @import "bootstrap-rtl/modal";
-//@import "bootstrap-rtl/tooltip";
-//@import "bootstrap-rtl/popover";
+@import "bootstrap-rtl/tooltip";
+@import "bootstrap-rtl/popover";
 @import "bootstrap-rtl/carousel";
 @import "bootstrap-rtl/utilities";
 //@import "bootstrap-rtl/print";
