--- a/src/scss/main/main.scss
+++ b/src/scss/main/main.scss
@@ -37,8 +37,8 @@ $dir: ltr;
 @import 'bootstrap/list-group';
 @import 'bootstrap/close';
 @import 'bootstrap/modal';
-//@import "bootstrap/tooltip";
-//@import "bootstrap/popover";
+@import "bootstrap/tooltip";
+@import "bootstrap/popover";
 @import 'bootstrap/carousel';
 @import 'bootstrap/utilities';
 //@import "bootstrap/print";
