--- a/src/scss/layouts/_home-details.scss
+++ b/src/scss/layouts/_home-details.scss
@@ -73,6 +73,51 @@
 
 }
 
+.selected-vehicle-details{
+  top: 18%;
+  left: 0;
+  width: 100%;
+  position: absolute;
+  transform: translate(0, -50%);
+  display: flex;
+  justify-content: space-between;
+
+  .header-label{
+    width: 100%;
+    height: 13px;
+    font-family: Roboto;
+    font-size: 15px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: normal;
+    letter-spacing: normal;
+    text-align: left;
+    color: #fefeff;  
+    margin-left: 21px;
+    @include if-rtl{
+      margin-right: -90px;
+    }
+}
+
+.header-h3{
+  width: 100%;
+  height: 19px;
+  font-family: Roboto;
+  font-size: 25px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  text-align: left;
+  color: #fefeff;
+  text-transform: uppercase;
+  margin-left: 21px;
+}
+
+}
+
 .main-parts {
   padding-top: 50px;
   @include media-breakpoint-down(sm){
@@ -414,24 +459,73 @@
 .vendor{
   @extend .mt-sec-home;
   text-align: center;
-  header{
-    h1{
-      @include font-size(30px);
+  background-image: url('/img/tire-bg.jpg');
+  text-align: center;
+  background-image: url(/img/tire-bg.jpg);
+  height: 276.5px;
+  margin-top: 60.5px;
+  padding: 15px;
+  .shop-tires{
+    display: flex;
+    justify-content: space-between;
+    height: 100%;
+
+    .tires-img{
+      height: 100%;
+      margin-left: 25px;
+      margin-top: 18.5px;
+    }
+   .shop-tires-details{
+     header{
+      width: 174px;
+      height: 23px;
+      font-family: Roboto;
+      font-size: 30px;
       font-weight: 500;
-      line-height: 1;
-      @include media-breakpoint-down(sm){
-        @include font-size(25px);
-
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: left;
+      color: #37363c;
+      margin-left: 25px;
+      margin-top: 18.5px;
+      @include if-rtl{
+      margin-right: -68px;
+      }
+     }
+     hr{
+      width: 85px;
+      height: 2px;
+      background-color: #ed4036;
+      text-align: left;
+      @include if-ltr {
+        margin-left: 25px;
+      }
+      @include if-rtl{
+        margin-left: 53px;
+        width: 57px;
       }
     }
-    p{
-      @include font-size(20px);
-      text-transform: capitalize;
-      @include media-breakpoint-down(sm){
-        @include font-size(13px);
-
+    h5{
+      width: 200px;
+      height: 20px;
+      font-family: Roboto;
+      font-size: 20px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: left;
+      color: #37363c;
+      margin-left: 28px;
+      margin-top: 34px;
+      @include if-rtl{
+        margin-right: -136px;
       }
     }
+   }
   }
   .action{
     display: flex;
@@ -452,6 +546,9 @@
       };
     }
   }
+}
+.top-selling{
+  padding-top: 50px;
 }
 .shop-brand{
   padding: 15px;
