--- a/src/scss/modules/_buttons.scss
+++ b/src/scss/modules/_buttons.scss
@@ -117,8 +117,9 @@
   }
 }
 .btn-black{
-  background: rgba(0, 0, 0, 0.4);
+  background: rgba(153, 129, 129, 0.4);
   color: $light-gray-2;
+  // margin-right: 61.6px;
   &:hover{
     color: $light-gray-2;
 
