--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -89,8 +89,18 @@
         display: inline-block;
         margin-bottom: 0;
         @include font-size(13px);
-        @include opacity(0.6);
+        color: $charcoal-grey;
         padding-#{$right}: 15px;
+        &:hover{
+          a{
+            color: $basic-gray;
+            text-decoration: underline;
+          }
+        }
+      }
+      a{
+        cursor: pointer;
+
       }
       button{
         width: 35px;
@@ -147,7 +157,7 @@
     margin-bottom: 0;
     padding-bottom: 0;
     > li{
-      margin-#{$right}: 20px;
+      margin-#{$right}: 15px;
       @include font-size(15px);
       > a{
         display: flex;
@@ -323,7 +333,6 @@
       @extend .d-flex;
       @extend .mb-0;
       > li{
-        //@extend .flex-fill;
         a{
           padding: 5px 10px;
           @include font-size(13px);
@@ -375,10 +384,12 @@
     }
     .dropdown-toggle{
       &:after{
+        margin-#{$left}: 5px;
+        margin-#{$right}: 0;
         @include if-rtl{
-          margin-right: 5px;
           position: relative;
           top: 2px;
+
         };
       }
     }
