--- a/src/scss/state/selected-vehicle.scss
+++ b/src/scss/state/selected-vehicle.scss
@@ -28,6 +28,8 @@
   }
 }
 .selected-vechile{
+  color: $dark-gray;
+  position: relative;
   .btn{
     @include font-size(17px);
     display: flex;
@@ -58,48 +60,61 @@
       }
     }
   }
+  .header-label{
+    @include font-size(15px);
+    margin-bottom: 2px;
+    @include opacity(0.8);
+    @include if-ltr{
+      font-weight: 300;
+    };
+    @include if-rtl{
+      font-weight: 400;
+    };
+  }
+  h3{
+    @include font-size(25px);
+    @extend .uppercase;
+    margin-bottom: 0;
+    line-height: 0.8;
+    @include if-ltr{
+      font-weight: 300;
+    };
+  }
+  p{
+    @include font-size(17px);
+    margin-bottom: 0;
+    margin-top: 5px;
+  }
+  .btn-group{
+    align-items: flex-end;
+  }
   .default-header-bg{
     min-height: 0;
     padding-top: 30px;
     padding-bottom: 30px;
-    color: $dark-gray;
-    .header-label{
-      @include font-size(15px);
-      margin-bottom: 2px;
-      @include opacity(0.8);
-      @include if-ltr{
-        font-weight: 300;
-      };
-      @include if-rtl{
-        font-weight: 400;
-      };
-    }
-    h3{
-      @include font-size(25px);
-      @extend .uppercase;
-      margin-bottom: 0;
-      line-height: 0.8;
-      @include if-ltr{
-        font-weight: 300;
-      };
-    }
-    @include media-breakpoint-down(sm){
-      padding-top: 15px;
-      padding-bottom: 15px;
-      .btn{
-          padding-right: 11px;
-          padding-left: 11px;
-      }
-      h3{
-        @include font-size(22px);
-        padding-top: 5px;
-        margin-bottom: 10px;
-      }
-    };
     + section{
       padding-top: 30px;
     }
   }
+  @include media-breakpoint-down(sm){
+    .default-header-bg{
+      padding-top: 15px;
+      padding-bottom: 15px;
+    }
+    .btn{
+        padding-right: 11px;
+        padding-left: 11px;
+        @include font-size(16px);
+    }
+    h3{
+      @include font-size(22px);
+      padding-top: 5px;
+    }
+    .btn-group{
+      margin-top: 15px;
+    }
+
+  };
   .category-list{
     margin-bottom: 0;
     margin-top: -30px;
